--- a/SComputers/contact_me.html
+++ b/SComputers/contact_me.html
@@ -13,6 +13,7 @@
 
         <h1 class="text">communication methods:</h1>
         <div style="margin-left: auto; display: flex;">
+            <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://www.youtube.com/@ololololo-l5z', '_blank');"><img src="icons/youtube.png"/></div>
             <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://discord.com/users/804098593002618881', '_blank');"><img src="icons/discord.png"/></div>
             <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
             <div class="image-button" style="margin-right: 10px;" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
