--- a/SComputers/making_addons.html
+++ b/SComputers/making_addons.html
@@ -48,6 +48,7 @@
 			<li><span>sm.scomputers.require(self:table, name:string) - require the library from the mod. it requires self because it needs to create a library cache and transfer library access to env. if the library you want to connect does not need the env of the computer and you do not have a self computer, then simply pass an empty table instead of self or your self</span></li>
             <li><span>sm.scomputers.realIsComputerConnected(interactable):boolean - returns true if at least 1 computer is connected to this interactable</span></li>
             <li><span>sm.scomputers.isComputerConnected(interactable):boolean - it works the same way as sm.scomputers.realIsComputerConnected, but it returns true, not only if the computer is connected, but also if the component connection check is turned off</span></li>
+            <li><span>sm.scomputers.isUnsafeFeatures(interactable):boolean - returns true if an unsafe mode is set in the mod, or if a unsafe computer from SComputers integrable is connected to your component</span></li>
             <li><span>sm.scomputers.base64_encode(string):string</span></li>
             <li><span>sm.scomputers.base64_decode(string):string</span></li>
             <li><span>sm.scomputers.sha256_bin(string):string</span></li>
