--- a/SComputers/utils.html
+++ b/SComputers/utils.html
@@ -34,7 +34,35 @@
             <li><span>utils.dist(vec3, vec3):number - calculates the distance between two points</span></li>
             <li><span>utils.fromEuler(vec3):quat - custom fromEuler implementation</span></li>
             <li><span>utils.toEuler(quat):vec3 - converts a quaternion to an Euler angle</span></li>
+            <li><span>utils.radarTriangulation(radarTarget:table, radarPosition:vec3, radarDirectionYPrad:number):vec3 - accepts the target that the radar returned to you, the radar position that you received from somewhere (for example, set as a constant or received from GPS), and the radar direction (you can extract this from the "-gps.getSelfGpsData().rotationEuler.z" if you set the GPS on the same plane as the radar with the screen facing up and point the tail of the GPS logo towards the radar arrow) returns the target's coordinate in the world</span></li>
+            <li><span>utils.createPID(kp:1, ki:0, kd:0, dt:40):function(target, input):output - creates a new PID controller</span></li>
         </ul>
+
+        <pre>
+            <code class="language-lua" style="width: fit-content;">--Please note that this code does not implement radar rotation, so the angle is limited to 180 degrees.
+--also, the utils.radarTriangulation function currently provides triangulation functionality only for radars standing on a horizontal plane
+                
+local utils = require("utils")
+
+local radar = getComponent("radar")
+local gps = getComponent("gps")
+
+radar.setAngle(math.rad(0))
+radar.setVFov(math.rad(180))
+radar.setHFov(math.rad(180))
+
+function callback_loop()
+    local gpsdata = gps.getSelfGpsData()
+    local pos = gpsdata.position
+    local angle = -gpsdata.rotationEuler.z
+
+    print("----------")
+    for i, target in ipairs(radar.getTargets()) do
+        local pos = utils.radarTriangulation(target, pos, angle)
+        print(i .. ". " .. utils.roundTo(pos.x, 1) .. " : " .. utils.roundTo(pos.y, 1) .. " : " .. utils.roundTo(pos.z, 1))
+    end
+end</code>
+        </pre>
     
         <script src="main.js"></script>
     </body>
