added new SComputers addon to list

--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -154,6 +154,31 @@
             </div>
 
 
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>More Disks</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3525123410">
+                        <img src="addons/more_disks.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text">
+                        Adds more disk and ROM disk variations<br/>
+                    </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3525123410', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
+
+            
+
+
 
             </br>
             <a name="online_boombox"></a>
