--- a/SComputers/objs.html
+++ b/SComputers/objs.html
@@ -35,10 +35,15 @@
             <li><span>tabbar:createOtherspaceWindow():window - creates a window for all the remaining available space on this object that is not occupied by the tabbar</span></li>
         </ul>
         
-        <p class="text">seekbar:</p>
+        <p class="text">seekbar methods:</p>
         <ul class="list">
             <li><span>seekbar:setValue(value)</span></li>
             <li><span>seekbar:getValue():value</span></li>
+        </ul>
+
+        <p class="text">seekbar callbacks:</p>
+        <ul class="list">
+            <li><span>seekbar:onValueChanged(newvalue:number)</span></li>
         </ul>
 
         <pre>
