--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -153,6 +153,29 @@
                 </center>
             </div>
 
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>better disks</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3525929600">
+                        <img src="addons/better_disks.jpg" class="image" />
+                    </a>
+
+                    </br>
+                    <p class="cool-text">
+                        these disks do not store data in a block, but in the BetterFS directory using betterAPI</br>
+                        requires a betterAPI version of at least 59
+                    </p>
+
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3525929600', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
+
 
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
