--- a/SComputers/display.html
+++ b/SComputers/display.html
@@ -145,8 +145,8 @@
         <ul class="list">
             <li><span>display.setHoloOffset(x, y, z) - changes the displacement of the hologram relative to the display. the maximum offset is 5</span></li>
             <li><span>display.getHoloOffset():x, y, z - returns the value set using display.setOffset</span></li>
-            <li><span>display.setHoloRotation(x, y, z) - changes the rotation of the hologram relative to the display</span></li>
-            <li><span>display.getHoloRotation():x, y, z - returns the value set using display.setRotation</span></li>
+            <li><span>display.setHoloRotation(x, y, z, altRotation) - changes the rotation of the hologram relative to the display. when the alternative rotation mode is enabled, the rotation operation is performed first and only then the mixing operation is performed. Please note that the offset work slightly differently in this mode</span></li>
+            <li><span>display.getHoloRotation():x, y, z, altRotation - returns the value set using display.setRotation</span></li>
             <li><span>display.setHoloScale(x, y) - sets the scale of the hologram. the maximum scale is 5</span></li>
             <li><span>display.getHoloScale():x, y - returns the value set using display.setScale</span></li>
         </ul>
