--- a/logichub/index.html
+++ b/logichub/index.html
@@ -264,6 +264,8 @@
                 <center>
                     <h2>WinBox Maker</h2>
                     <img src="https://raw.githubusercontent.com/igorkll/WinBox-Maker/refs/heads/master/preview.png" class="image"/>
+                    <img src="https://raw.githubusercontent.com/igorkll/WinBox-Maker/refs/heads/master/preview2.png" class="image"/>
+                    <img src="https://raw.githubusercontent.com/igorkll/WinBox-Maker/refs/heads/master/preview3.png" class="image"/>
 
                     </br>
                     <div class="cool-text">
