--- a/SComputers/display.html
+++ b/SComputers/display.html
@@ -32,6 +32,7 @@
             <li><span>material 2 - general block</span></li>
             <li><span>material 3 - smoothed (to work, you will need to enable the blur effect in the game graphics settings)</span></li>
             <li><span>material 4 - glowing (alternative)</span></li>
+            <li><span>material 5 - transparent (alternative)</span></li>
         </ul>
 
         <br/>
