added more motors to addon list

--- a/SComputers/addons.html
+++ b/SComputers/addons.html
@@ -176,7 +176,6 @@
                 </center>
             </div>
 
-
             </br>
             <div class="cool-frame" style="width: 70%; max-width: 1200px;">
                 <center>
@@ -199,9 +198,27 @@
                 </center>
             </div>
 
-            
+            </br>
+            <div class="cool-frame" style="width: 70%; max-width: 1200px;">
+                <center>
+                    <h2>More Motors</h2>
+                    <a target="_blank" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3527300061">
+                        <img src="addons/more_motors.jpg" class="image" />
+                    </a>
 
+                    </br>
+                    <p class="cool-text">
+                        Adds more motors and creative motors variations. Also have it's own new commands!<br/>
+                    </p>
 
+                    <div class="cool-text" style="position: absolute; bottom: 0; left: 0;">
+                        type: <span style="color: rgb(106, 255, 0);">addon for SComputers</span>
+                    </div>
+
+                    </br>
+                    <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=3527300061', '_blank').focus();">download addon from steam</button>
+                </center>
+            </div>
 
             </br>
             <a name="online_boombox"></a>
