--- a/logichub/index.html
+++ b/logichub/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/scroll.css">
         <link rel="stylesheet" href="styles/button.css">
+        <link rel="stylesheet" href="styles/state.css">
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
