--- a/logichub/index.html
+++ b/logichub/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="styles/scroll.css">
         <link rel="stylesheet" href="styles/button.css">
         <link rel="stylesheet" href="styles/state.css">
+        <link rel="stylesheet" href="styles/category.css">
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
@@ -36,6 +37,7 @@
         </div>
 
         <div class="content-box" id="cards">
+            <div id="categories" class="category-selector box-shadow"></div>
         </div>
     
         <script async src="https://cse.google.com/cse.js?cx=319af69f537d9450e"></script>
