just update canvasAPI version in docs

--- a/SComputers/nbs.html
+++ b/SComputers/nbs.html
@@ -58,6 +58,8 @@
                 the function resets settings such as nbsPlayer:setNoteShift, nbsPlayer:setNoteDuration and nbsPlayer:setDefaultInstrument after its call, so if you want to change them, you need to call their change after this function.<br/>
                 betterAPI required
             </span></li>
+                    <li><span>nbsPlayer:configDefault() - reconfigures the library to work with standard sounds
+            </span></li>
         </ul>
 
         <p class="text">nbsPlayer fields:</p>
