--- a/SComputers/keyboard.html
+++ b/SComputers/keyboard.html
@@ -36,6 +36,7 @@
             <li><span>keyboard.isSoundEnable():boolean - returns the value set using keyboard.setSoundEnable (default: true)</span></li>
             <li><span>keyboard.setSyntax(boolean) - enables syntax highlighting in the keyboard input field. does not work when print mode is enabled (default: false)</span></li>
             <li><span>keyboard.isSyntax():boolean - returns the value set using keyboard.setSyntax (default: false)</span></li>
+            <li><span>keyboard.closeGui() - close gui</span></li>
         </ul>
 
         <pre>
