--- a/logichub/index.html
+++ b/logichub/index.html
@@ -37,6 +37,18 @@
         </div>
 
         <div class="content-box" id="cards">
+            <noscript>
+                <div class="content-part box-shadow">
+                    <div class="content-title text-shadow">
+                        ENABLE JAVASCRIPT!!!
+                    </div>
+
+                    <div class="content-description text-shadow box-shadow">
+                        the site loads its content from js. it's more convenient for me to make the layout. it WON'T work without javascript!!
+                    </div>
+                </div>
+            </noscript>
+            
             <div id="categories" class="category-selector box-shadow"></div>
         </div>
     
@@ -44,5 +56,7 @@
         <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
         <script src="main.js"></script>
         <script src="content.js"></script>
+        <script src="blog/blog.js"></script>
+        <script src="anchor.js"></script>
     </body>
 </html>
