--- a/logichub/index.html
+++ b/logichub/index.html
@@ -17,8 +17,7 @@
     <body>
         <div class="titlebar overlay box-shadow">
             <div class="titlebar-container titlebar-start">
-                <img class="barimage box-shadow" src="avatars/logic.png"/>
-                <img class="barimage box-shadow" src="avatars/bananapen.png"/>
+                <img class="barimage box-shadow" src="avatars/furry.png"/>
                 <div class="bartext text-shadow">Logic Hub</div>
             </div>
 
