--- a/logicgallery/index.html
+++ b/logicgallery/index.html
@@ -22,6 +22,15 @@
                 <div class="gallery-item"><img src="gallery/3.png"></img></div>
                 <div class="gallery-item"><img src="gallery/4.png"></img></div>
                 <div class="gallery-item"><img src="gallery/5.png"></img></div>
+                <div class="gallery-item"><img src="gallery/6.png"></img></div>
+                <div class="gallery-item"><img src="gallery/7.png"></img></div>
+                <div class="gallery-item"><img src="gallery/8.png"></img></div>
+                <div class="gallery-item"><img src="gallery/9.png"></img></div>
+                <div class="gallery-item"><img src="gallery/10.png"></img></div>
+                <div class="gallery-item"><img src="gallery/11.png"></img></div>
+                <div class="gallery-item"><img src="gallery/12.png"></img></div>
+                <div class="gallery-item"><img src="gallery/13.png"></img></div>
+                <div class="gallery-item"><img src="gallery/14.png"></img></div>
             </div>
         </div>
     
